--- a/styles/global.css
+++ b/styles/global.css
@@ -85,3 +85,8 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+/* Fix mobile */
+.notion-gallery-grid {
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)) !important;
+}
