Add padding to outside of hover

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -79,14 +79,12 @@
 .notion-collection-card {
   border-radius: 0.5em;
   box-shadow: none;
+  overflow: visible;
+  padding: 10px;
 }
 
 .notion-collection-card-cover img {
   border-radius: 0.5em;
-}
-
-.notion-collection-card {
-  overflow: visible;
 }
 
 .notion-collection-card-cover {
@@ -105,7 +103,7 @@
 }
 
 .notion-collection-card-body {
-  padding: 10px;
+  padding: 10px 0 0 0;
 }
 
 /* only target safari */
