--- a/styles/nline.css
+++ b/styles/nline.css
@@ -39,26 +39,25 @@ body {
   caret-color: var(--fg-color);
 }
 
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
   width: 5px;
   height: 5px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   background-color: var(--bg-color-1);
 }
 
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #555;
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: var(--fg-color-1);
 }
 
-::-webkit-scrollbar-track {           
-    background-color: var(--bg-color);
+::-webkit-scrollbar-track {
+  background-color: var(--bg-color);
+}
 
 /* Fix wide TOC */
 .notion-aside {
@@ -82,7 +81,7 @@ body {
   text-overflow: ellipsis;
 }
 
-.notion-header .breadcrumb.active>.title {
+.notion-header .breadcrumb.active > .title {
   overflow: hidden;
   text-overflow: ellipsis;
 }
