--- a/styles/notion.css
+++ b/styles/notion.css
@@ -1,5 +1,5 @@
 /**
- * This file contains site-specifc style overrides for Notion elements from
+ * This file contains site-specific style overrides for Notion elements from
  * react-notion-x.
  *
  * react-notion-x's goal is to match styling as close as possible to Notion,
