--- a/styles/nline.css
+++ b/styles/nline.css
@@ -68,6 +68,10 @@ body {
   max-width: 80%;
 }
 
+.notion-table-of-contents-item {
+  white-space: unset;
+}
+
 .notion-table-of-contents-item-body {
   display: block;
   overflow: hidden;
